<resources>
    <string name="app_name">ContactAppRetrofit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="verify">Verification code</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="firstname">firstName</string>
    <string name="lastname">lastName</string>
    <string name="number">number</string>
    <string name="close">close</string>
    <string name="save">save</string>
    <string name="confirm_password">Confirm password</string>
    <string name="todo">TODO</string>
    <string name="register">Register</string>
</resources>