<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".presentation.ui.screens.RegisterScreen">

    <EditText
        android:id="@+id/inputFirstName"
        style="@style/EditText"
        android:layout_marginTop="72dp"
        android:hint="@string/first_name"
        android:maxLength="15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:inputType="text" />

    <EditText
        android:id="@+id/inputLastName"
        style="@style/EditText"
        android:inputType="text"
        android:layout_marginTop="8dp"
        android:hint="@string/last_name"
        android:maxLength="15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputFirstName" />

    <EditText
        android:id="@+id/inputPhoneNumber"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/phone_number"
        android:maxLength="13"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLastName" />

    <EditText
        android:id="@+id/inputPassword"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:maxLength="15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPhoneNumber" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        style="@style/EditText"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_password"
        android:maxLength="15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        style="@style/ActionButton"
        android:layout_marginBottom="28dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>